--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-logo link" href="./index.html">
@@ -62,18 +62,18 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <!--main-content-->
     <main>
       <!--hero-->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!--section1-->
       <section class="feature">
         <div class="container">
@@ -161,10 +161,10 @@
       </section>
       <!--section3-->
       <section class="team">
-        <div class="container">
+        <div class="container container-small">
           <h2 class="team-title section-title">Our Team</h2>
-          <ul class="about-team list">
-            <li class="team-card">
+          <ul class="team-list list">
+            <li class="team-list-item">
               <img src="./images/team/mark.jpg" alt="man" width="264" />
               <div class="card-content">
                 <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
@@ -201,7 +201,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team-card">
+            <li class="team-list-item">
               <img src="./images/team/tom.jpg" alt="man" width="264" />
               <div class="card-content">
                 <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
@@ -238,7 +238,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team-card">
+            <li class="team-list-item">
               <img src="./images/team/camila.jpg" alt="woman" width="264" />
               <div class="card-content">
                 <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
@@ -275,7 +275,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team-card">
+            <li class="team-list-item">
               <img src="./images/team/daniel.jpg" alt="man" width="264" />
               <div class="card-content">
                 <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
@@ -367,7 +367,7 @@
       </section>
     </main>
     <!--Footer-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer-container container">
         <div class="footer-asaid">
           <a class="footer-logo link" href="./index.html">
@@ -378,8 +378,8 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <!--footer-social-->
-        <div class="footer-link">
+        <--footer-social-->
+        <!-- <div class="footer-link">
           <h2 class="footer-subtitle section-subtitle">Social media</h2>
           <ul class="footer-social-list list">
             <li class="footer-social-item">
@@ -411,9 +411,9 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div> -->
         <!--footer-form-->
-        <div class="footer-form">
+        <!-- <div class="footer-form">
           <p class="footer-subtitle section-subtitle">Subscribe</p>
           <form class="form">
             <label for="mail"></label>
@@ -430,8 +430,8 @@
             </svg>
           </form>
         </div>
-      </div>
-    </footer>
+      </div> -->
+    </footer> 
     <!--backdrop-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
