--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-logo link" href="./index.html">
@@ -62,7 +62,7 @@
           </ul>
         </address>
       </div>
-    </header> -->
+    </header>
     <!--main-content-->
     <main>
       <!--hero-->
