--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,14 @@
 
     <!--base styles-->
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desktop.css" />
+  </head>
   </head>
 
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-logo link" href="./index.html">
@@ -61,7 +65,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <!-- main-content -->
     <main>
       <section class="portfolio">
@@ -290,69 +294,68 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="footer-container container">
-        <div class="footer-asaid">
-          <a class="footer-logo link" href="./index.html">
-            <span>Web</span>Studio</a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="footer-link">
-          <h3 class="footer-subtitle section-subtitle">Social media</h3>
-          <ul class="footer-social-list list">
-            <li class="footer-social-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#instagram"></use>
+     <div class="footer-container container">
+       <div class="footer-asaid">
+            <a class="footer-logo link" href="./index.html">
+              <span>Web</span>Studio</a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-link">
+            <h3 class="footer-subtitle section-subtitle">Social media</h3>
+            <ul class="footer-social-list list">
+              <li class="footer-social-item">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+            <div class="footer-form">
+              <p class="footer-subtitle section-subtitle">Subscribe</p>
+              <form class="form">
+                <label for="mail"></label>
+                <input
+                  type="email"
+                  class="footer-mail"
+                  name="user-mail"
+                  id="mail"
+                  placeholder="E-mail"
+                  required
+                />
+                <button type="submit" class="btn-subscribe">Subscribe</button>
+                <svg class="frame" width="24" height="24">
+                  <use href="./images/icons.svg#frame"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <!--footer-form-->
-        <div class="footer-form">
-          <p class="footer-subtitle section-subtitle">Subscribe</p>
-          <form class="form">
-            <label for="mail"></label>
-            <input
-              type="email"
-              class="footer-mail"
-              name="user-mail"
-              id="mail"
-              placeholder="E-mail"
-              required
-            />
-            <button type="submit" class="btn-subscribe">Subscribe</button>
-            <svg class="frame" width="24" height="24">
-              <use href="./images/icons.svg#frame"></use>
-            </svg>
-          </form>
-        </div>
-      </div>
+              </form>
+            </div >
+     </div>
     </footer>
   </body>
 </html>
