add images.jpg, update styles.css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-logo link" href="./index.html">
@@ -62,18 +62,18 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <!--main-content-->
     <main>
       <!--hero-->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <!--section1-->
       <section class="feature">
         <div class="container">
