--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-logo link" href="./index.html">
@@ -47,7 +47,7 @@
             </li>
           </ul>
         </nav>
-        <address class="link-address">
+        <!-- <address class="link-address">
           <ul class="contact-list list">
             <li class="contact-item">
               <a class="contact-link link" href="mailto:info@devstudio.com"
@@ -60,9 +60,9 @@
               >
             </li>
           </ul>
-        </address>
+        </address> -->
       </div>
-    </header> -->
+    </header>
     <!--main-content-->
     <main>
       <!--hero-->
@@ -139,11 +139,19 @@
               <img
                 src="./images/about/desktop.jpg"
                 alt="computer monitor"
+                srcset="
+                  ./images/about/desktop.jpg   1x,
+                  ./images/about/desktop2x.jpg 2x
+                "
                 width="360"
               />
             </li>
             <li class="list-about-item">
               <img
+                srcset="
+                  ./images/about/phone_app.jpg   1x,
+                  ./images/about/phone_app2x.jpg 2x
+                "
                 src="./images/about/phone_app.jpg"
                 alt="phone apps"
                 width="360"
@@ -151,6 +159,10 @@
             </li>
             <li class="list-about-item">
               <img
+                srcset="
+                  ./images/about/connection.jpg   1x,
+                  ./images/about/connection2x.jpg 2x
+                "
                 src="./images/about/connection.jpg"
                 alt="take a phone in a hand near the laptop"
                 width="360"
@@ -161,11 +173,16 @@
       </section>
       <!--section3-->
       <section class="team">
-        <div class="container container-small">
+        <div class="container">
           <h2 class="team-title section-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-list-item">
-              <img src="./images/team/mark.jpg" alt="man" width="264" />
+              <img
+                srcset="./images/team/mark.jpg 1x, ./images/team/mark2x.jpg 2x"
+                src="./images/team/mark.jpg"
+                alt="man"
+                width="264"
+              />
               <div class="card-content">
                 <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
                 <p class="team-text section-text">Product Designer</p>
@@ -202,7 +219,12 @@
               </div>
             </li>
             <li class="team-list-item">
-              <img src="./images/team/tom.jpg" alt="man" width="264" />
+              <img
+                srcset="./images/team/tom.jpg 1x, ./images/team/tom2x.jpg 2x"
+                src="./images/team/tom.jpg"
+                alt="man"
+                width="264"
+              />
               <div class="card-content">
                 <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
                 <p class="team-text section-text">Frontend Developer</p>
@@ -239,7 +261,15 @@
               </div>
             </li>
             <li class="team-list-item">
-              <img src="./images/team/camila.jpg" alt="woman" width="264" />
+              <img
+                srcset="
+                  ./images/team/camila.jpg   1x,
+                  ./images/team/camila2x.jpg 2x
+                "
+                src="./images/team/camila.jpg"
+                alt="woman"
+                width="264"
+              />
               <div class="card-content">
                 <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
                 <p class="team-text section-text">Marketing</p>
@@ -276,7 +306,15 @@
               </div>
             </li>
             <li class="team-list-item">
-              <img src="./images/team/daniel.jpg" alt="man" width="264" />
+              <img
+                srcset="
+                  ./images/team/daniel.jpg   1x,
+                  ./images/team/daniel2x.jpg 2x
+                "
+                src="./images/team/daniel.jpg"
+                alt="man"
+                width="264"
+              />
               <div class="card-content">
                 <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
                 <p class="team-text section-text">UI Designer</p>
@@ -367,7 +405,7 @@
       </section>
     </main>
     <!--Footer-->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="footer-container container">
         <div class="footer-asaid">
           <a class="footer-logo link" href="./index.html">
@@ -378,8 +416,8 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <--footer-social-->
-        <!-- <div class="footer-link">
+
+        <div class="footer-link">
           <h2 class="footer-subtitle section-subtitle">Social media</h2>
           <ul class="footer-social-list list">
             <li class="footer-social-item">
@@ -411,9 +449,9 @@
               </a>
             </li>
           </ul>
-        </div> -->
-        <!--footer-form-->
-        <!-- <div class="footer-form">
+        </div>
+
+        <div class="footer-form">
           <p class="footer-subtitle section-subtitle">Subscribe</p>
           <form class="form">
             <label for="mail"></label>
@@ -424,14 +462,16 @@
               id="mail"
               placeholder="E-mail"
             />
-            <button type="submit" class="btn-subscribe">Subscribe</button>
-            <svg class="frame" width="24" height="24">
-              <use href="./images/icons.svg#frame"></use>
-            </svg>
+            <div class="footer-btn">
+              <button type="submit" class="btn-subscribe">Subscribe</button>
+              <svg class="frame" width="24" height="24">
+                <use href="./images/icons.svg#frame"></use>
+              </svg>
+            </div>
           </form>
         </div>
-      </div> -->
-    </footer> 
+      </div>
+    </footer>
     <!--backdrop-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
