--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </li>
           </ul>
         </nav>
-        <!-- <address class="link-address">
+        <address class="link-address">
           <ul class="contact-list list">
             <li class="contact-item">
               <a class="contact-link link" href="mailto:info@devstudio.com"
@@ -60,7 +60,12 @@
               >
             </li>
           </ul>
-        </address> -->
+        </address>
+        <button class="menu-btn-open">
+          <svg width="32" height="22">
+            <use href="./images/icons.svg#mob-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!--main-content-->
