--- a/index.html
+++ b/index.html
@@ -73,66 +73,68 @@
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
-        <div>
-          <ul class="mob-list list">
-            <li class="mob-item">
-              <a class="mob-link link" href="./index.html">Studio</a>
-            </li>
-            <li class="mob-item">
-              <a class="mob-link link" href="./portfolio.html">Portfolio</a>
-            </li>
-            <li class="mob-item">
-              <a class="mob-link contacts link" href="#Contacts">Contacts</a>
-            </li>
-          </ul>
-        </div>
-        <div>
-          <address class="mob-address">
-            <ul class="mob-contact-list list">
-              <li class="mob-contact-item">
-                <a class="mob-contact-tel link" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
+        <div class="container">
+          <div>
+            <ul class="mob-list list">
+              <li class="mob-item">
+                <a class="mob-link link" href="./index.html">Studio</a>
               </li>
-              <li class="mob-contact-item">
-                <a
-                  class="mob-contact-mail link"
-                  href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
+              <li class="mob-item">
+                <a class="mob-link link" href="./portfolio.html">Portfolio</a>
+              </li>
+              <li class="mob-item">
+                <a class="mob-link contacts link" href="#Contacts">Contacts</a>
               </li>
             </ul>
-          </address>
-          <ul class="mob-social-list list">
-            <li class="mob-social-item">
-              <a class="mob-social-link" href="">
-                <svg class="mob-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="mob-social-item">
-              <a class="mob-social-link" href="">
-                <svg class="mob-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="mob-social-item">
-              <a class="mob-social-link" href="">
-                <svg class="mob-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="mob-social-item">
-              <a class="mob-social-link" href="">
-                <svg class="mob-social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
+          <div>
+            <address class="mob-address">
+              <ul class="mob-contact-list list">
+                <li class="mob-contact-item">
+                  <a class="mob-contact-tel link" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+                <li class="mob-contact-item">
+                  <a
+                    class="mob-contact-mail link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <ul class="mob-social-list list">
+              <li class="mob-social-item">
+                <a class="mob-social-link" href="">
+                  <svg class="mob-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-social-item">
+                <a class="mob-social-link" href="">
+                  <svg class="mob-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-social-item">
+                <a class="mob-social-link" href="">
+                  <svg class="mob-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-social-item">
+                <a class="mob-social-link" href="">
+                  <svg class="mob-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
