--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-logo link" href="./index.html">
@@ -45,7 +45,9 @@
               >
             </li>
             <li class="header-links">
-              <a class="header-link link" href="#Contacts">Contacts</a>
+              <a class="header-link link current-tab" href="#Contacts"
+                >Contacts</a
+              >
             </li>
           </ul>
         </nav>
@@ -63,8 +65,81 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="menu-btn-open" data-menu-open>
+          <svg class="mob-btn-icon-open" width="32" height="22">
+            <use href="./images/icons.svg#hamburger"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+      <div class="mob-menu is-hidden" data-menu>
+        <button type="button" class="mob-btn-close" data-menu-close>
+          <svg class="mob-btn-icon-close" width="8" height="8">
+            <use href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
+        <div>
+          <ul class="mob-list list">
+            <li class="mob-item">
+              <a class="mob-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="mob-item">
+              <a class="mob-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="mob-item">
+              <a class="mob-link contacts link" href="#Contacts">Contacts</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <address class="mob-address">
+            <ul class="mob-contact-list list">
+              <li class="mob-contact-item">
+                <a class="mob-contact-tel link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="mob-contact-item">
+                <a
+                  class="mob-contact-mail link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="mob-social-list list">
+            <li class="mob-social-item">
+              <a class="mob-social-link" href="">
+                <svg class="mob-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-social-item">
+              <a class="mob-social-link" href="">
+                <svg class="mob-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-social-item">
+              <a class="mob-social-link" href="">
+                <svg class="mob-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-social-item">
+              <a class="mob-social-link" href="">
+                <svg class="mob-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
     <!-- main-content -->
     <main>
       <section class="portfolio">
