--- a/portfolio.html
+++ b/portfolio.html
@@ -45,9 +45,7 @@
               >
             </li>
             <li class="header-links">
-              <a class="header-link link current-tab" href="#Contacts"
-                >Contacts</a
-              >
+              <a class="header-link link" href="#Contacts">Contacts</a>
             </li>
           </ul>
         </nav>
