--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </ul>
         </address>
         <button type="button" class="menu-btn-open" data-menu-open>
-          <svg class="mob-btn-icon-open" width="32" height="22">
+          <svg class="mob-btn-icon-open" width="30" height="18">
             <use href="./images/icons.svg#hamburger"></use>
           </svg>
         </button>
@@ -77,13 +77,13 @@
           <div>
             <ul class="mob-list list">
               <li class="mob-item">
-                <a class="mob-link link" href="./index.html">Studio</a>
+                <a class="mob-link contacts link" href="./index.html">Studio</a>
               </li>
               <li class="mob-item">
                 <a class="mob-link link" href="./portfolio.html">Portfolio</a>
               </li>
               <li class="mob-item">
-                <a class="mob-link contacts link" href="#Contacts">Contacts</a>
+                <a class="mob-link link" href="#Contacts">Contacts</a>
               </li>
             </ul>
           </div>
